style: fix horizontal scrolling on mobile

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,6 +21,9 @@
 .tooltip {
   @apply absolute left-0 -bottom-7 px-2 py-1 w-max text-gray-300 shadow-lg opacity-0 transition-opacity pointer-events-none bg-gray-700/80 rounded-xs group-hover:opacity-100;
 }
+.plant-progress-bar-item.last .tooltip {
+  @apply left-auto right-0;
+}
 
 /*
  * Base plant card styles.
